@@ -1,6 +1,5 @@
 ﻿using LightBDD.Framework;
 using Xunit;
-using Xunit.Abstractions;
 
 namespace LightBDD.XUnit2.UnitTests
 {
@@ -8,10 +7,6 @@ namespace LightBDD.XUnit2.UnitTests
     {
         private class TestableFeatureFixture : FeatureFixture
         {
-            public TestableFeatureFixture(ITestOutputHelper output) : base(output)
-            {
-            }
-
             public IBddRunner GetRunner()
             {
                 return Runner;
@@ -21,7 +16,7 @@ namespace LightBDD.XUnit2.UnitTests
         [Fact]
         public void Runner_should_be_initialized()
         {
-            Assert.NotNull(new TestableFeatureFixture(null).GetRunner());
+            Assert.NotNull(new TestableFeatureFixture().GetRunner());
         }
     }
 }
